<resources>
    <string name="app_name">HangulClock</string>

    <string name="action_clock">시계</string>
    <string name="action_timer">타이머</string>

    <string name="keep_screen_on">화면 끄기 방지</string>
    <string name="use_24hour">이십사시 시간사용</string>
    <string name="current_time">현재 시각</string>
    <string name="time_settings">시간 설정</string>

    <string name="timer_hint_hour">시간</string>
    <string name="timer_hint_minute">분</string>
    <string name="timer_hint_second">초</string>

    <string name="start">시작</string>
    <string name="pause">일시정지</string>
    <string name="stop">정지</string>

    <string name="alarm_message">타이머 시간이 경과 되었습니다!</string>
</resources>
