<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HangulClock" >

    <EditText
        android:id="@+id/edit_timer_hour"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/timer_hint_hour"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_timer_minute"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edit_timer_hour"
        android:hint="@string/timer_hint_minute"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_timer_second"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edit_timer_minute"
        android:hint="@string/timer_hint_second"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text=""
        android:textSize="20pt"/>

    <CheckBox
        android:id="@+id/chk_screen_keep_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_screen_on"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignBottom="@+id/chk_screen_keep_on"
        android:layout_alignRight="@+id/text_timer"
        android:layout_alignEnd="@+id/text_timer" />

</RelativeLayout>
