<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HangulClock" >

    <TextView
        android:id="@+id/text_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text=""
        android:textSize="20pt"/>

    <CheckBox
        android:id="@+id/chk_24hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/use_24hour"/>

    <CheckBox
        android:id="@+id/chk_screen_keep_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chk_24hour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/keep_screen_on"/>

    <Button
        android:id="@+id/btn_clock_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chk_24hour"
        android:layout_alignRight="@+id/text_clock"
        android:layout_alignEnd="@+id/text_clock"
        android:text="@string/time_settings"/>

</RelativeLayout>
